--- a/src/components/TeamLeaderboard.css
+++ b/src/components/TeamLeaderboard.css
@@ -60,6 +60,7 @@
 
 .player-cell {
   min-width: 150px;
+  text-align: left;
 }
 
 .score-cell,
